test/expected/declare_o_dot_k.out
declare . as operator returning S
        ^
9: error: operator "." can not be overloaded
